WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
304427
REGRESSION(
304572@main
): [macOS iOS] fast/html/a-tooltip-null.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=304427
Summary
REGRESSION(304572@main): [macOS iOS] fast/html/a-tooltip-null.html is a flaky...
Marta Darbinyan
Reported
2025-12-18 12:00:34 PST
The following test is flaky crash on iOS and macOS. The change
304572@main
is most likely the cause of the crash. fast/html/a-tooltip-null.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x1241cc210 WebCore::FrameLoader::didReachLayoutMilestone(WTF::OptionSet<WebCore::LayoutMilestone, (WTF::ConcurrencyTag)0>) 1 com.apple.WebCore 0x12433978c WebCore::LocalFrameView::firePaintRelatedMilestonesIfNeeded() 2 com.apple.WebCore 0x1243396e0 WebCore::LocalFrameView::didPaintContents(WebCore::GraphicsContext&, WebCore::IntRect const&, WebCore::LocalFrameView::PaintingState&) 3 com.apple.WebCore 0x1249331f0 WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, WebCore::IntRect const&, WTF::OptionSet<WebCore::PaintBehavior, (WTF::ConcurrencyTag)0>, WebCore::RegionContext*)::$_51::operator()(WebCore::RenderLayer&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag, (WTF::ConcurrencyTag)0>) const 4 com.apple.WebCore 0x124932ddc WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, WebCore::IntRect const&, WTF::OptionSet<WebCore::PaintBehavior, (WTF::ConcurrencyTag)0>, WebCore::RegionContext*) 5 com.apple.WebCore 0x124934224 WebCore::RenderLayerBacking::paintContents(WebCore::GraphicsLayer const&, WebCore::GraphicsContext&, WebCore::FloatRect const&, WTF::OptionSet<WebCore::GraphicsLayerPaintBehavior, (WTF::ConcurrencyTag)0>) 6 com.apple.WebCore 0x1245a5a0c WebCore::GraphicsLayer::paintGraphicsLayerContents(WebCore::GraphicsContext&, WebCore::FloatRect const&, WTF::OptionSet<WebCore::GraphicsLayerPaintBehavior, (WTF::ConcurrencyTag)0>) const 7 com.apple.WebCore 0x1231e1154 WebCore::PlatformCALayer::drawLayerContents(WebCore::GraphicsContext&, WebCore::PlatformCALayer*, WTF::Vector<WebCore::FloatRect, 5ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WTF::OptionSet<WebCore::GraphicsLayerPaintBehavior, (WTF::ConcurrencyTag)0>) 8 com.apple.WebCore 0x124669d38 WebCore::TileGrid::platformCALayerPaintContents(WebCore::PlatformCALayer*, WebCore::GraphicsContext&, WebCore::FloatRect const&, WTF::OptionSet<WebCore::GraphicsLayerPaintBehavior, (WTF::ConcurrencyTag)0>) 9 com.apple.WebKit 0x10e99eed0 WebKit::RemoteLayerBackingStore::drawInContext(WebCore::GraphicsContext&) 10 com.apple.WebKit 0x10e9acc58 WebKit::RemoteLayerWithRemoteRenderingBackingStore::createContextAndPaintContents() 11 com.apple.WebKit 0x10e99ecb4 WebKit::RemoteLayerBackingStore::paintContents() Test history:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fhtml%2Fa-tooltip-null.html&flavor=wk2
Test result:
https://ews-build.webkit.org/#/builders/136/builds/40825
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-18 12:00:55 PST
<
rdar://problem/166812256
>
EWS
Comment 2
2025-12-18 13:03:04 PST
Test gardening commit
304699@main
(0bbef2e809a7): <
https://commits.webkit.org/304699@main
> Reviewed commits have been landed. Closing PR #55646 and removing active labels.
jlee53
Comment 3
2025-12-18 18:46:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55667
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug