REGRESSION(304572@main): [macOS iOS] fast/html/a-tooltip-null.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=304427 rdar://166812256

Fix flaky null pointer exceptions from accessing the document loader.

I tested this manually with the repro steps and confirmed it did not reproduces.
The below tests all pass:
run-webkit-tests fast/html/a-tooltip-null.html --release --iteration 10
run-webkit-tests fast/html/HTMLPluginElement-renderer-destroyed-crash.html --release --iteration 10

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::didReachLayoutMilestone):